--- a/package.json
+++ b/package.json
@@ -9,15 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@googlemaps/js-api-loader": "^1.16.8",
+    "@headlessui/react": "^2.2.0",
+    "autoprefixer": "^10.4.20",
+    "compressorjs": "^1.2.1",
+    "date-fns": "^4.1.0",
+    "firebase": "^11.4.0",
+    "immer": "^10.1.1",
+    "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.6"
+    "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
+    "swr": "^2.3.2",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "@eslint/eslintrc": "^3",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
-    "@eslint/eslintrc": "^3"
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17"
   }
 }
