--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.16.8",
     "@headlessui/react": "^2.2.0",
+    "@react-google-maps/api": "^2.20.6",
     "autoprefixer": "^10.4.20",
     "compressorjs": "^1.2.1",
     "date-fns": "^4.1.0",
@@ -21,7 +22,7 @@
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
-    "swr": "^2.3.2",
+    "swr": "^2.3.3",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
