--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.16.8",
+    "@googlemaps/markerclusterer": "^2.5.3",
     "@headlessui/react": "^2.2.0",
     "@react-google-maps/api": "^2.20.6",
     "autoprefixer": "^10.4.20",
